syntax = "proto3";

import "google/api/annotations.proto";

package Aphro.Encryption.pb;

service EncryptionService {

		rpc base64Encode(EncryptionBase64EncodeRequest) returns (EncryptionBase64EncodeResponse) {
			option (google.api.http) = {
				post: "/encryption/base64Encode"
				body:"*"
			};
		}

		rpc base64Decode(EncryptionBase64DecodeRequest) returns (EncryptionBase64DecodeResponse) {
			option (google.api.http) = {
				post: "/encryption/base64Decode"
				body:"*"
			};
		}
		
		rpc xxteaEncryption(EncryptionXXTEARequest) returns (EncryptionXXTEAResponse) {
			option (google.api.http) = {
				post: "/encryption/xxtea"
				body:"*"
			};
		}

		rpc xxteaDecryption(DecryptionXXTEARequest) returns (DecryptionXXTEAResponse) {
			option (google.api.http) = {
				post: "/decryption/xxtea"
				body:"*"
			};
		}

		rpc rsaEncryption(EncryptionRSARequest) returns (EncryptionRSAResponse) {
			option (google.api.http) = {
				post: "/encryption/rsa"
				body:"*"
			};
		}

		rpc rsaDecryption(DecryptionRSARequest) returns (DecryptionRSAResponse) {
			option (google.api.http) = {
				post: "/decryption/rsa"
				body:"*"
			};
		}

}
/////////////////////base64 /////////////////////
//base64 Decode Requset

message EncryptionBase64DecodeRequest {
	string  decodedStr = 1;
}

message EncryptionBase64DecodeResponse {
	bytes  rawValue = 1;
}


message EncryptionBase64EncodeRequest {
	bytes  rawValue = 1;
}

message EncryptionBase64EncodeResponse {
	string  encodedStr = 1;
}

///////////////// XXTEA /////////////////////
message EncryptionXXTEARequest{
	 string key = 1;
	 string rawValue = 2;
}

message EncryptionXXTEAResponse{
	 string key = 1;
	 bytes encryptedStr = 2;
}

message DecryptionXXTEARequest{
	 string key = 1;
	 bytes encryptedStr = 2;
}

message DecryptionXXTEAResponse{
	 string key = 1;
	 string rawValue = 2;
}

////////////////RSA //////////////////////
message EncryptionRSARequest{
	 bytes rawValue = 1;
}

message EncryptionRSAResponse{
	 bytes encryptedStr = 1;
}

message DecryptionRSARequest{
	 bytes encryptedStr = 1;
}

message DecryptionRSAResponse{
	 bytes rawValue = 1;
}

